--- a/AN_ICT9R_Q3Exercise4_Lacson_Rhianna.html
+++ b/AN_ICT9R_Q3Exercise4_Lacson_Rhianna.html
@@ -94,7 +94,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="https://static.wikia.nocookie.net/warner-bros-entertainment/images/7/77/Leonard_Hofstadter.jpg/revision/latest?cb=20220406225812" class="rounded"></td>
+			<td><img src="https://cdn.images.express.co.uk/img/dynamic/20/590x/secondary/What-does-Leonard-do-in-Big-Bang-Theory-2316706.jpg?r=1581936031274" class="rounded"></td>
 			<td>Leonard</td>
 			<td>Hofstadter</td>
 			<td>Ph. D., Physicist</td>
