--- a/AN_ICT9R_Q3Project_Lacson_Rhianna.html
+++ b/AN_ICT9R_Q3Project_Lacson_Rhianna.html
@@ -182,7 +182,7 @@
 	<br><br>
 
 	<div class="container text-light" style="background-color: #DF7857;">
-		<h3 class="text-light">Help Spreadawareness about this</h3>
+		<h3 class="text-light">Help Spread Awareness about this</h3>
 
 		<form class="form-group">
 
